openurljob.cpp: Avoid opening files in endless loop if mimetype is set to open with xdg-open

Some applications set their file mimetypes to open with "xdg-open" which then
causes it open in "kde-open", which then ends up calling itself
constantly and endlessly, spiking CPU.

Instead, catch that early on and show the "Open with dialog", so
we handle the file like it has no set default application.

BUG:494335